---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 302
  l: "trait Convertible<T> {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^
- n: 303
  l: "    fn convert(&self) -> T;\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 304
  l: "}\n"
  m: "^  "
